Fixed problems with overflowing text in story boxes

--- a/css/style.css
+++ b/css/style.css
@@ -116,9 +116,11 @@ p{
 }
 .story-box .content--text{
 	display: block;
+	max-height: 44px;
 	margin: 0;
 	font-size: 17px;
 	line-height: 22px;
+	overflow: hidden;
 }
 .story-box.landing-story .author--pic{
 	width: 100px;
@@ -705,6 +707,7 @@ footer a + a{
 	cursor: pointer;
 }
 .image-performance .hover-content{
+	max-height: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -719,6 +722,8 @@ footer a + a{
 	-moz-transition: opacity .3s ease;
 	-o-transition: opacity .3s ease;
 	transition: opacity .3s ease;
+	overflow: hidden;
+	box-sizing: border-box;
 }
 
 .image-performance .hover-content .center{
